# mastodon-defederate

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  README.md  requirements_dev.txt  setup.cfg  update-blocklist.py
.azure-pipelines/: azure-pipelines.yml  ci.yml  flake8-validation.py  syntax-validation.py
.github/workflows/: ci.yml  codeql.yml  static_validation.yml
src/defederate/: __init__.py  activitypub.py  blocklist_parsers.py  cli.py  const.py  server_api.py
src/defederate/plugin/: __init__.py  markdown.py  mastodon3.py  mastodon4.py
src/mastoblock/: errors.py  instance_block.py  update_blocklist.py
