[metadata]
name = defederate
version = 0.0.2
url = https://github.com/Anthchirp/mastodon-defederate
project_urls =
    Bug Tracker = https://github.com/Anthchirp/mastodon-defederate/issues
    Source Code = https://github.com/Anthchirp/mastodon-defederate
description = Tools for Mastodon Instance Blocklist Management
license = BSD 3-Clause License
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
#    Programming Language :: Python :: 3.7
#    Programming Language :: Python :: 3.8
#    Programming Language :: Python :: 3.9
#    Programming Language :: Python :: 3.10
#    Programming Language :: Python :: 3.11
keywords = mastodon

[options]
install_requires =
    requests
packages = find:
package_dir =
    =src
python_requires = >=3.6
zip_safe = False

[options.entry_points]
console_scripts =
    defederate = defederate.cli:main

[options.package_data]
defederate = py.typed

[flake8]
# Black disagrees with flake8 on a few points. Ignore those.
ignore = E203, E266, E501, W503
# E203 whitespace before ':'
# E266 too many leading '#' for block comment
# E501 line too long
# W503 line break before binary operator

max-line-length = 88

select =
    E401,E711,E712,E713,E714,E721,E722,E901,
    F401,F402,F403,F405,F541,F631,F632,F633,F811,F812,F821,F822,F841,F901,
    W191,W291,W292,W293,W602,W603,W604,W605,W606,
    # flake8-comprehensions, https://github.com/adamchainz/flake8-comprehensions
    C4,
